--- a/package.json
+++ b/package.json
@@ -10,31 +10,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
+    "@angular/animations": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/fire": "17.0.0",
+    "@angular/forms": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
     "@google-pay/button-angular": "^3.0.9",
-    "@google-pay/button-element": "^3.0.9",
-    "@ng-bootstrap/ng-bootstrap": "15.1.2",
-    "bootstrap": "^5.3.0",
-    "bootstrap-icons": "^1.10.5",
     "firebase": "^9.23.0",
     "ngx-bootstrap": "^6.2.0",
-    "ngx-stripe": "16.4.0",
-    "rxjs": "~7.5.0",
+    "ngx-stripe": "17.2.0",
+    "rxjs": "7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.15",
-    "@angular/cli": "~16.2.15",
-    "@angular/compiler-cli": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.3.9",
+    "@angular/cli": "~17.3.9",
+    "@angular/compiler-cli": "^17.3.12",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
@@ -45,6 +41,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.1.6"
+    "typescript": "~5.4.5"
   }
 }
